# name: TestClickhouseTrends.test_aggregating_by_group
  '
  
  SELECT groupArray(day_start) as date,
         groupArray(count) as data
  FROM
    (SELECT SUM(total) AS count,
            day_start
     from
       (SELECT toUInt16(0) AS total,
               toStartOfDay(toDateTime('2020-01-12 23:59:59') - toIntervalDay(number)) AS day_start
        FROM numbers(dateDiff('day', toDateTime('2020-01-01 00:00:00'), toDateTime('2020-01-12 23:59:59')))
        UNION ALL SELECT toUInt16(0) AS total,
                         toStartOfDay(toDateTime('2020-01-01 00:00:00'))
        UNION ALL SELECT count(DISTINCT $group_0) as data,
                         toDateTime(toStartOfDay(timestamp), 'UTC') as date
        FROM
          (SELECT e.timestamp as timestamp,
                  e.$group_0 as $group_0
           FROM events e
           WHERE team_id = 2
             AND event = '$pageview'
             AND toStartOfDay(timestamp) >= toStartOfDay(toDateTime('2020-01-01 00:00:00'))
             AND timestamp <= '2020-01-12 23:59:59'
             AND NOT has([''], $group_0)
             AND team_id = 2 )
        GROUP BY toStartOfDay(timestamp))
     group by day_start
     order by day_start)
  '
---
# name: TestClickhouseTrends.test_aggregating_by_group.1
  '
  
  SELECT groupArray(day_start) as date,
         groupArray(count) as data
  FROM
    (SELECT SUM(total) AS count,
            day_start
     from
       (SELECT toUInt16(0) AS total,
               toStartOfDay(toDateTime('2020-01-12 23:59:59') - toIntervalDay(number)) AS day_start
        FROM numbers(dateDiff('day', toDateTime('2020-01-01 00:00:00'), toDateTime('2020-01-12 23:59:59')))
        UNION ALL SELECT toUInt16(0) AS total,
                         toStartOfDay(toDateTime('2020-01-01 00:00:00'))
        UNION ALL SELECT count(DISTINCT $group_1) as data,
                         toDateTime(toStartOfDay(timestamp), 'UTC') as date
        FROM
          (SELECT e.timestamp as timestamp,
                  e.$group_1 as $group_1
           FROM events e
           WHERE team_id = 2
             AND event = '$pageview'
             AND toStartOfDay(timestamp) >= toStartOfDay(toDateTime('2020-01-01 00:00:00'))
             AND timestamp <= '2020-01-12 23:59:59'
             AND NOT has([''], $group_1)
             AND team_id = 2 )
        GROUP BY toStartOfDay(timestamp))
     group by day_start
     order by day_start)
  '
---
# name: TestClickhouseTrends.test_breakdown_by_group_props
  '
  
  SELECT groupArray(value)
  FROM
    (SELECT trim(BOTH '"'
                 FROM JSONExtractRaw(group_properties_0, 'industry')) AS value,
            count(*) as count
     FROM events e
     INNER JOIN
       (SELECT group_key,
               argMax(group_properties, _timestamp) AS group_properties_0
        FROM groups
        WHERE team_id = 2
          AND group_type_index = 0
        GROUP BY group_key) groups_0 ON $group_0 == groups_0.group_key
     WHERE team_id = 2
       AND event = 'sign up'
       AND timestamp >= '2020-01-01 00:00:00'
       AND timestamp <= '2020-01-12 23:59:59'
     GROUP BY value
     ORDER BY count DESC
     LIMIT 25
     OFFSET 0)
  '
---
# name: TestClickhouseTrends.test_breakdown_by_group_props.1
  '
  
  SELECT groupArray(day_start) as date,
         groupArray(count) as data,
         breakdown_value
  FROM
    (SELECT SUM(total) as count,
            day_start,
            breakdown_value
     FROM
       (SELECT *
        FROM
          (SELECT toUInt16(0) AS total,
                  ticks.day_start as day_start,
                  breakdown_value
           FROM
             (SELECT toStartOfDay(toDateTime('2020-01-12 23:59:59') - number * 86400) as day_start
              FROM numbers(12)
              UNION ALL SELECT toStartOfDay(toDateTime('2020-01-01 00:00:00')) as day_start) as ticks
           CROSS JOIN
             (SELECT breakdown_value
              FROM
                (SELECT ['finance', 'technology'] as breakdown_value) ARRAY
              JOIN breakdown_value) as sec
           ORDER BY breakdown_value,
                    day_start
           UNION ALL SELECT count(*) as total,
                            toDateTime(toStartOfDay(timestamp), 'UTC') as day_start,
                            trim(BOTH '"'
                                 FROM JSONExtractRaw(group_properties_0, 'industry')) as breakdown_value
           FROM events e
           INNER JOIN
             (SELECT group_key,
                     argMax(group_properties, _timestamp) AS group_properties_0
              FROM groups
              WHERE team_id = 2
                AND group_type_index = 0
              GROUP BY group_key) groups_0 ON $group_0 == groups_0.group_key
           WHERE e.team_id = 2
             AND event = 'sign up'
             AND toStartOfDay(timestamp) >= toStartOfDay(toDateTime('2020-01-01 00:00:00'))
             AND timestamp <= '2020-01-12 23:59:59'
             AND trim(BOTH '"'
                      FROM JSONExtractRaw(group_properties_0, 'industry')) in (['finance', 'technology'])
           GROUP BY day_start,
                    breakdown_value))
     GROUP BY day_start,
              breakdown_value
     ORDER BY breakdown_value,
              day_start)
  GROUP BY breakdown_value
  '
---
# name: TestClickhouseTrends.test_breakdown_by_group_props_with_person_filter
  '
  
  SELECT groupArray(value)
  FROM
    (SELECT trim(BOTH '"'
                 FROM JSONExtractRaw(group_properties_0, 'industry')) AS value,
            count(*) as count
     FROM events e
     INNER JOIN
       (SELECT distinct_id,
               argMax(person_id, _timestamp) as person_id
        FROM
          (SELECT distinct_id,
                  person_id,
                  max(_timestamp) as _timestamp
           FROM person_distinct_id
           WHERE team_id = 2
           GROUP BY person_id,
                    distinct_id,
                    team_id
           HAVING max(is_deleted) = 0)
        GROUP BY distinct_id) AS pdi ON e.distinct_id = pdi.distinct_id
     INNER JOIN
       (SELECT id
        FROM person
        WHERE team_id = 2
        GROUP BY id
        HAVING max(is_deleted) = 0
        AND has(['value'], trim(BOTH '"'
                                FROM JSONExtractRaw(argMax(person.properties, _timestamp), 'key')))) person ON pdi.person_id = person.id
     INNER JOIN
       (SELECT group_key,
               argMax(group_properties, _timestamp) AS group_properties_0
        FROM groups
        WHERE team_id = 2
          AND group_type_index = 0
        GROUP BY group_key) groups_0 ON $group_0 == groups_0.group_key
     WHERE team_id = 2
       AND event = 'sign up'
       AND timestamp >= '2020-01-01 00:00:00'
       AND timestamp <= '2020-01-12 23:59:59'
     GROUP BY value
     ORDER BY count DESC
     LIMIT 25
     OFFSET 0)
  '
---
# name: TestClickhouseTrends.test_breakdown_by_group_props_with_person_filter.1
  '
  
  SELECT groupArray(day_start) as date,
         groupArray(count) as data,
         breakdown_value
  FROM
    (SELECT SUM(total) as count,
            day_start,
            breakdown_value
     FROM
       (SELECT *
        FROM
          (SELECT toUInt16(0) AS total,
                  ticks.day_start as day_start,
                  breakdown_value
           FROM
             (SELECT toStartOfDay(toDateTime('2020-01-12 23:59:59') - number * 86400) as day_start
              FROM numbers(12)
              UNION ALL SELECT toStartOfDay(toDateTime('2020-01-01 00:00:00')) as day_start) as ticks
           CROSS JOIN
             (SELECT breakdown_value
              FROM
                (SELECT ['finance'] as breakdown_value) ARRAY
              JOIN breakdown_value) as sec
           ORDER BY breakdown_value,
                    day_start
           UNION ALL SELECT count(*) as total,
                            toDateTime(toStartOfDay(timestamp), 'UTC') as day_start,
                            trim(BOTH '"'
                                 FROM JSONExtractRaw(group_properties_0, 'industry')) as breakdown_value
           FROM events e
           INNER JOIN
             (SELECT distinct_id,
                     argMax(person_id, _timestamp) as person_id
              FROM
                (SELECT distinct_id,
                        person_id,
                        max(_timestamp) as _timestamp
                 FROM person_distinct_id
                 WHERE team_id = 2
                 GROUP BY person_id,
                          distinct_id,
                          team_id
                 HAVING max(is_deleted) = 0)
              GROUP BY distinct_id) as pdi ON events.distinct_id = pdi.distinct_id
           INNER JOIN
             (SELECT id
              FROM person
              WHERE team_id = 2
              GROUP BY id
              HAVING max(is_deleted) = 0
              AND has(['value'], trim(BOTH '"'
                                      FROM JSONExtractRaw(argMax(person.properties, _timestamp), 'key')))) person ON person.id = pdi.person_id
           INNER JOIN
             (SELECT group_key,
                     argMax(group_properties, _timestamp) AS group_properties_0
              FROM groups
              WHERE team_id = 2
                AND group_type_index = 0
              GROUP BY group_key) groups_0 ON $group_0 == groups_0.group_key
           WHERE e.team_id = 2
             AND event = 'sign up'
             AND toStartOfDay(timestamp) >= toStartOfDay(toDateTime('2020-01-01 00:00:00'))
             AND timestamp <= '2020-01-12 23:59:59'
             AND trim(BOTH '"'
                      FROM JSONExtractRaw(group_properties_0, 'industry')) in (['finance'])
           GROUP BY day_start,
                    breakdown_value))
     GROUP BY day_start,
              breakdown_value
     ORDER BY breakdown_value,
              day_start)
  GROUP BY breakdown_value
  '
---
# name: TestClickhouseTrends.test_breakdown_with_filter_groups
  '
  
  SELECT groupArray(value)
  FROM
    (SELECT trim(BOTH '"'
                 FROM JSONExtractRaw(properties, 'key')) AS value,
            count(*) as count
     FROM events e
     INNER JOIN
       (SELECT group_key,
               argMax(group_properties, _timestamp) AS group_properties_0
        FROM groups
        WHERE team_id = 2
          AND group_type_index = 0
        GROUP BY group_key) groups_0 ON $group_0 == groups_0.group_key
     WHERE team_id = 2
       AND event = 'sign up'
       AND timestamp >= '2020-01-01 00:00:00'
       AND timestamp <= '2020-01-12 23:59:59'
       AND has(['finance'], trim(BOTH '"'
                                 FROM JSONExtractRaw(group_properties_0, 'industry')))
     GROUP BY value
     ORDER BY count DESC
     LIMIT 25
     OFFSET 0)
  '
---
# name: TestClickhouseTrends.test_breakdown_with_filter_groups.1
  '
  
  SELECT groupArray(day_start) as date,
         groupArray(count) as data,
         breakdown_value
  FROM
    (SELECT SUM(total) as count,
            day_start,
            breakdown_value
     FROM
       (SELECT *
        FROM
          (SELECT toUInt16(0) AS total,
                  ticks.day_start as day_start,
                  breakdown_value
           FROM
             (SELECT toStartOfDay(toDateTime('2020-01-12 23:59:59') - number * 86400) as day_start
              FROM numbers(12)
              UNION ALL SELECT toStartOfDay(toDateTime('2020-01-01 00:00:00')) as day_start) as ticks
           CROSS JOIN
             (SELECT breakdown_value
              FROM
                (SELECT ['oh', 'uh'] as breakdown_value) ARRAY
              JOIN breakdown_value) as sec
           ORDER BY breakdown_value,
                    day_start
           UNION ALL SELECT count(*) as total,
                            toDateTime(toStartOfDay(timestamp), 'UTC') as day_start,
                            trim(BOTH '"'
                                 FROM JSONExtractRaw(properties, 'key')) as breakdown_value
           FROM events e
           INNER JOIN
             (SELECT group_key,
                     argMax(group_properties, _timestamp) AS group_properties_0
              FROM groups
              WHERE team_id = 2
                AND group_type_index = 0
              GROUP BY group_key) groups_0 ON $group_0 == groups_0.group_key
           WHERE e.team_id = 2
             AND event = 'sign up'
             AND has(['finance'], trim(BOTH '"'
                                       FROM JSONExtractRaw(group_properties_0, 'industry')))
             AND toStartOfDay(timestamp) >= toStartOfDay(toDateTime('2020-01-01 00:00:00'))
             AND timestamp <= '2020-01-12 23:59:59'
             AND trim(BOTH '"'
                      FROM JSONExtractRaw(properties, 'key')) in (['oh', 'uh'])
           GROUP BY day_start,
                    breakdown_value))
     GROUP BY day_start,
              breakdown_value
     ORDER BY breakdown_value,
              day_start)
  GROUP BY breakdown_value
  '
---
# name: TestClickhouseTrends.test_filtering_with_group_props
  '
  
  SELECT groupArray(day_start) as date,
         groupArray(count) as data
  FROM
    (SELECT SUM(total) AS count,
            day_start
     from
       (SELECT toUInt16(0) AS total,
               toStartOfDay(toDateTime('2020-01-12 23:59:59') - toIntervalDay(number)) AS day_start
        FROM numbers(dateDiff('day', toDateTime('2020-01-01 00:00:00'), toDateTime('2020-01-12 23:59:59')))
        UNION ALL SELECT toUInt16(0) AS total,
                         toStartOfDay(toDateTime('2020-01-01 00:00:00'))
        UNION ALL SELECT count(*) as data,
                         toDateTime(toStartOfDay(timestamp), 'UTC') as date
        FROM
          (SELECT e.timestamp as timestamp,
                  pdi.person_id as person_id
           FROM events e
           INNER JOIN
             (SELECT distinct_id,
                     argMax(person_id, _timestamp) as person_id
              FROM
                (SELECT distinct_id,
                        person_id,
                        max(_timestamp) as _timestamp
                 FROM person_distinct_id
                 WHERE team_id = 2
                 GROUP BY person_id,
                          distinct_id,
                          team_id
                 HAVING max(is_deleted) = 0)
              GROUP BY distinct_id) AS pdi ON events.distinct_id = pdi.distinct_id
           INNER JOIN
             (SELECT id
              FROM person
              WHERE team_id = 2
              GROUP BY id
              HAVING max(is_deleted) = 0
              AND has(['value'], trim(BOTH '"'
                                      FROM JSONExtractRaw(argMax(person.properties, _timestamp), 'key')))) person ON person.id = pdi.person_id
           INNER JOIN
             (SELECT group_key,
                     argMax(group_properties, _timestamp) AS group_properties_0
              FROM groups
              WHERE team_id = 2
                AND group_type_index = 0
              GROUP BY group_key) groups_0 ON $group_0 == groups_0.group_key
           WHERE team_id = 2
             AND event = '$pageview'
             AND toStartOfDay(timestamp) >= toStartOfDay(toDateTime('2020-01-01 00:00:00'))
             AND timestamp <= '2020-01-12 23:59:59'
             AND has(['finance'], trim(BOTH '"'
                                       FROM JSONExtractRaw(group_properties_0, 'industry'))) )
        GROUP BY toStartOfDay(timestamp))
     group by day_start
     order by day_start)
  '
---
